# Networked-Producer-and-Consumer

./: README.md
MediaSystem/: CMakeLists.txt  README.txt  sha256.h
MediaSystem/MediaInput/: test1.mkv
MediaSystem/consumer/: CMakeLists.txt  bounded_queue.h  consumer_main.cpp  grpc_service.cpp  grpc_service.h  http_gui_server.cpp  sha256.h  worker.cpp  worker.h
MediaSystem/producer/: CMakeLists.txt  producer_main.cpp  uploader.cpp  uploader.h
MediaSystem/proto/: media.proto
MediaSystem/web/: index.html  main.js
